# ugly

./: .gitmodules  Makefile.in  README-dev.md  README.md  configure  configure.ac
src/: Makefile  Makefile.in
src/algencan/: Makefile
src/bobyqa/: Makefile
src/cg_descent/: Makefile
src/cgplus/: Makefile
src/cobyla/: Makefile
src/gen77/: Makefile
src/ipopt/: Makefile
src/loqo/: Makefile
src/minos/: Makefile
src/pds/: Makefile
src/tools/: Makefile
